WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101765
[Qt] Can not load MHTML documents
https://bugs.webkit.org/show_bug.cgi?id=101765
Summary
[Qt] Can not load MHTML documents
Allan Sandfeld Jensen
Reported
2012-11-09 08:53:44 PST
The Qt platform does not currently have MHTML enabled, and even if enabled, it will not run the tests or open .mht documents. The only reason it doesn't work is because we do not recognize the .mht extension.
Attachments
Patch
(2.60 KB, patch)
2012-11-09 08:57 PST
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-11-09 08:57:31 PST
Created
attachment 173317
[details]
Patch
Allan Sandfeld Jensen
Comment 2
2012-11-09 08:59:04 PST
I have one uncertainty about the patch. We are not skipping the mhtml tests in TestExpectations, so I am not sure were they are automatically skipped or unskipped, but they run and pass.
Early Warning System Bot
Comment 3
2012-11-09 09:10:51 PST
Comment on
attachment 173317
[details]
Patch
Attachment 173317
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/14779451
Allan Sandfeld Jensen
Comment 4
2012-11-12 03:01:34 PST
Comment on
attachment 173317
[details]
Patch That error does not look related to this patch in any way.
WebKit Review Bot
Comment 5
2012-11-12 05:12:14 PST
Comment on
attachment 173317
[details]
Patch Clearing flags on attachment: 173317 Committed
r134214
: <
http://trac.webkit.org/changeset/134214
>
WebKit Review Bot
Comment 6
2012-11-12 05:12:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug