[Qt] Can not load MHTML documents https://bugs.webkit.org/show_bug.cgi?id=101765

Reviewed by Simon Hausmann.

Source/WebCore:

Recognize common MHTML extensions so that we can recognize MHTML tests on the file-system.

Tested by existing mhtml/ tests.

* platform/qt/MIMETypeRegistryQt.cpp:
(WebCore):

Tools:

Enable MHTML feature.

* qmake/mkspecs/features/features.pri:


Canonical link: https://commits.webkit.org/119983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134214 268f45cc-cd09-0410-ab3c-d52691b4dbfc